src/app/components/repo-view/repo-view.component.scss
.commit-area {
  padding: 1em;
}

.diff-viewer {
  overflow: hidden;
  @media (min-width: 768px) {
    max-width: 58vw;
  }
}

.state {
  display: inline-block;
}

.bold {
  font-weight: bold;
}

.change-body {
  max-height: 50vh;
  overflow: auto;
  table {
    width: 100%;
  }
}

.branch-container {
  max-height: 30vh;
  overflow: auto;
}

.card-header {
  cursor: pointer;
}

.full-width {
  width: 100%;
  margin: 0;
}

.stash-message {
  max-height: 4em;
  overflow-y: hidden;
  transition: max-height .5s;
  padding-top: .5em;
  &:hover {
    max-height: 10em;
    overflow-y: auto;
  }
}

.command-output {
  max-height: 6em;
  overflow-y: hidden;
  transition: max-height .5s;
  &:hover {
    max-height: 20em;
    overflow-y: auto;
  }
}

///////////////////////small///////////////////////
.card-body {
  padding: .3em;
  margin: 0;
}

.card-header, .btn {
  //padding: .3em;
  margin: 0;
}

.card {
  margin: 0;
  font-size: .9em;
}

.td, .th {
  padding: .3em;
}

